fix token name not showing up

--- a/src/styles.less
+++ b/src/styles.less
@@ -152,7 +152,8 @@ form {
   overflow: hidden;
   width: 200px;
 
-  height: 200px;
+  height: auto;
+  max-height: 235px;
   text-align: center;
   margin: 0 auto;
   border-radius: 8px;
